# unsloth.rs

./: README.md  report.md
unsloth-rs/: Cargo.toml
unsloth-rs/src/: core.rs  lib.rs  main.rs  save.rs  trainer.rs
unsloth-rs/src/dataprep/: mod.rs  synthetic.rs
unsloth-rs/src/kernels/: fast_lora.rs  mod.rs
unsloth-rs/src/models/: llama.rs
unsloth-rs/src/rl/: mod.rs  ppo.rs
unsloth-rs/src/utils/: hf_hub.rs  mod.rs
unsloth-rs/tests/: core.rs  dataprep.rs  kernels.rs  mod.rs  models.rs  trainer.rs
